After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726627 - gedit-app: Small memory leaks with css loading
gedit-app: Small memory leaks with css loading
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-18 13:04 UTC by Kalev Lember
Modified: 2014-07-12 16:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Plug memory leaks with css loading (1014 bytes, patch)
2014-03-18 13:05 UTC, Kalev Lember
committed Details | Review

Description Kalev Lember 2014-03-18 13:04:40 UTC
.
Comment 1 Kalev Lember 2014-03-18 13:05:43 UTC
Created attachment 272269 [details] [review]
Plug memory leaks with css loading
Comment 2 Ignacio Casal Quinteiro (nacho) 2014-03-18 13:51:22 UTC
Review of attachment 272269 [details] [review]:

Look good. If you get a code freeze break, then feel free to push it.
Comment 3 Kalev Lember 2014-03-24 11:33:28 UTC
Attachment 272269 [details] pushed as fa9263f - Plug memory leaks with css loading
Comment 4 Martin Ejdestig 2014-07-12 16:02:55 UTC
"provider" will leak if gtk_css_provider_load_from_file() fails?