Plug memory leaks with css loading

https://bugzilla.gnome.org/show_bug.cgi?id=726627